k8s/dashboard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: ghcr.io/abhijari/api-gateway-dashboard:latest
          ports:
            - containerPort: 3000
