k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: api-gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 3001
      targetPort: 3001
